Bug 1246132 - Improve register allocation speed on large functions, r=sunfish.