js/src/jit/BacktrackingAllocator.h
@@ -600,9 +600,6 @@ class BacktrackingAllocator : protected RegisterAllocator
     BitSet* liveIn;
     FixedList<VirtualRegister> vregs;
 
-    // Ranges where all registers must be spilled due to call instructions.
-    LiveBundle* callRanges;
-
     // Allocation state.
     StackSlotAllocator stackSlotAllocator;
 
@@ -641,6 +638,28 @@ class BacktrackingAllocator : protected RegisterAllocator
     // Ranges of code which are considered to be hot, for which good allocation
     // should be prioritized.
     LiveRangeSet hotcode;
+
+    struct CallRange : public TempObject, public InlineListNode<CallRange> {
+        LiveRange::Range range;
+
+        CallRange(CodePosition from, CodePosition to)
+          : range(from, to)
+        {}
+
+        // Comparator for use in splay tree.
+        static int compare(CallRange* v0, CallRange* v1) {
+            if (v0->range.to <= v1->range.from)
+                return -1;
+            if (v0->range.from >= v1->range.to)
+                return 1;
+            return 0;
+        }
+    };
+
+    // Ranges where all registers must be spilled due to call instructions.
+    typedef InlineList<CallRange> CallRangeList;
+    CallRangeList callRangesList;
+    SplayTree<CallRange*, CallRange> callRanges;
 
     // Information about an allocated stack slot.
     struct SpillSlot : public TempObject, public InlineForwardListNode<SpillSlot> {
@@ -754,7 +773,6 @@ class BacktrackingAllocator : protected RegisterAllocator
     }
 
     // Debugging methods.
-    void dumpFixedRanges();
     void dumpAllocations();
 
     struct PrintLiveRange;
